<resources>
    <string name="app_name">Ticket Tron</string>
    <string name="generTick">Generate Ticket</string>
    <string name="newTick">New Ticket</string>
    <string name="licPLate">License Plate</string>
    <string name="prov">Province</string>
    <string name="curTime">Current Time</string>
    <string name="carMan">Manufacturer</string>
    <string name="carModel">Car Model</string>
    <string name="model">Model</string>
    <string name="tickInfo">Ticket Info</string>
    <string name="plateNum">plate #</string>
    <string name="carMake">Car Make</string>
    <string name="backToMain">Back To Main</string>
    <string name="editTick">Edit Ticket</string>
    <string name="pubTick">Publish Ticket</string>
    <string name="viewTick">View Tickets</string>
    <string name="timeStamp">Time Stamp</string>
    <string name="date">Date</string>
    <string name="takePic">Take Picture</string>
    <string name="Infrac">Infraction</string>
    <string-array name="infrac_array">
        <item>None Desiginated spot</item>
        <item>No Ticket Displayed</item>
        <item>Over Limit</item>
    </string-array>
    <string name="ticID">Ticket ID</string>
</resources>
